--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-ul {
+nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    position: sticky;
-    top: 0;
+    position: relative;
+    top: 10px;
     width: 100%;
     overflow: hidden;
     background-color: #333;
