--- a/iconstyle.css
+++ b/iconstyle.css
@@ -2,7 +2,7 @@
 .fa {
   padding: 20px;
   font-size: 30px;
-  width: 30px;
+  width: 20px;
   text-align: center;
   text-decoration: none;
   border-radius: 50%;
@@ -20,13 +20,14 @@
   background: #3B5998;
   color: white;
 }
-.fa-youtube {
-  background: #FF0000;
-  color: white;
-}
 
 /* Twitter */
 .fa-twitter {
   background: #55ACEE;
+  color: white;
+}
+/* YouTube */
+.fa-youtube {
+  background: #FF0000;
   color: white;
 }
