Final website design

--- a/style.css
+++ b/style.css
@@ -1,45 +1,4 @@
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    position: relative;
-    top: 10px;
-    width: 100%;
-    overflow: hidden;
-    background-color: #333;
-}
-
-li {
-    float: left;
-}
-
-li a {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-li a:hover {
-    background-color: #111;
-}
-p {
-    font-size: 17px;
-    color: #595858;
-}
-h3 {
-    font-size: 20px;
-}
-img {
-    width: 38%;
-}
-#back {
-    color: white;
-    background-color: rgb(7, 171, 105);
-}
-body {
-    background-color: #faf9ec;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+body{
+    background-color:ivory;
     text-align: center;
 }
